--- a/src/templates/blogs/base.html
+++ b/src/templates/blogs/base.html
@@ -8,7 +8,7 @@
 <header>
     <a href="{% url 'home' %}">Home</a>
     <a href="{% url 'about' %}">About</a>
-</header>>
+</header>
 
 {% block content %}
 {% endblock content %}
