Add post details and styling

--- a/src/templates/blogs/base.html
+++ b/src/templates/blogs/base.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
 <body>
 <header>
-    <a href="{% url 'home' %}">Home</a>
+    <a href="{% url 'post_list' %}">Home</a>
     <a href="{% url 'about' %}">About</a>
 </header>
 
