--- a/src/templates/blogs/details.html
+++ b/src/templates/blogs/details.html
@@ -4,4 +4,7 @@
 <h2>{{ post.title }}</h2>
 <p>{{ post.text }}</p>
 </div>
+
+<a href="{% url 'post_edit' post.pk%}">Edit</a>
+<a href="{% url 'post_delete' post.pk%}">Delete</a>
 {% endblock content %}
