Add user accounts

--- a/src/templates/blogs/base.html
+++ b/src/templates/blogs/base.html
@@ -16,7 +16,13 @@
         <a href="{% url 'post_create' %}">New post</a>
     </div>
 </header>
-
+{% if user.is_authenticated %}
+<p>Hello, {{ user.username }}</p>
+<a href="{% url 'logout' %}">Log Out</a>
+{% else %}
+<p>You are not logged in</p>
+<a href="{% url 'login' %}">Log In</a>
+{% endif %}
 {% block content %}
 {% endblock content %}
 </body>
