Add custom user model

--- a/src/templates/blogs/base.html
+++ b/src/templates/blogs/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>{% block title%} FourPaws Team {% endblock title%}</title>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
@@ -22,6 +22,7 @@
 {% else %}
 <p>You are not logged in</p>
 <a href="{% url 'login' %}">Log In</a>
+<a href="{% url 'signup' %}">Sign up</a>
 {% endif %}
 {% block content %}
 {% endblock content %}
