--- a/src/templates/blogs/base.html
+++ b/src/templates/blogs/base.html
@@ -3,28 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title%} FourPaws Team {% endblock title%}</title>
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
-<header>
-    <div class="nav-left">
-    <a href="{% url 'post_list' %}">Home</a>
-    <a href="{% url 'about' %}">About</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="{% url 'post_list' %}">FourPaws.Team Blog</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse"
+            data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        {% if user.is_authenticated %}
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link dropdown-toggle" href="#"
+                   id="navbarDropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                    {{ user.username }}
+                </a>
+                <div class="dropdown-menu dropdown-menu-lg-right"
+                     aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item"
+                       href="{% url 'password_change'%}">Change password</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="{% url 'logout' %}">
+                        Log Out</a>
+                </div>
+            </li>
+        </ul>
+        {% else %}
+        <form class="form-inline ml-auto">
+            <a href="{% url 'login' %}" class="btn btn-outline-secondary">
+                Log In</a>
+            <a href="{% url 'signup' %}" class="btn btn-primary ml-2">
+                Sign up</a>
+        </form>
+        {% endif %}
     </div>
-    <div class="nav-right">
-        <a href="{% url 'post_create' %}">New post</a>
+</nav>
+<main>
+    <div class="container">
+        {% block content %}
+        {% endblock content %}
     </div>
-</header>
-{% if user.is_authenticated %}
-<p>Hello, {{ user.username }}</p>
-<a href="{% url 'logout' %}">Log Out</a>
-{% else %}
-<p>You are not logged in</p>
-<a href="{% url 'login' %}">Log In</a>
-<a href="{% url 'signup' %}">Sign up</a>
-{% endif %}
-{% block content %}
-{% endblock content %}
+</main>
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
 </html>
