--- a/src/templates/registration/login.html
+++ b/src/templates/registration/login.html
@@ -3,6 +3,6 @@
 <h1>Log In</h1>
 <form action="" method="post"> {% csrf_token %}
 {{ form.as_p}}
-    <input type="submit" value="Log In">
+    <button class="btn btn-success ml-2" type="submit">Log In</button>
     </form>
 {% endblock content %}
