--- a/src/templates/registration/signup.html
+++ b/src/templates/registration/signup.html
@@ -1,8 +1,9 @@
 {% extends 'blogs/base.html' %}
+{% load crispy_forms_tags %}
 {% block content %}
 <h1>Sign Up</h1>
 <form action="" method="post"> {% csrf_token %}
-{{ form.as_p}}
-    <input type="submit" value="Sign Up">
+{{ form|crispy}}
+    <button class="btn btn-success" type="submit">Sign Up</button>
     </form>
 {% endblock content %}
