--- a/src/templates/registration/login.html
+++ b/src/templates/registration/login.html
@@ -1,8 +1,10 @@
 {% extends 'blogs/base.html' %}
+{% load crispy_forms_tags %}
 {% block content %}
 <h1>Log In</h1>
 <form action="" method="post"> {% csrf_token %}
-{{ form.as_p}}
+{{ form|crispy }}
+    <br>
     <button class="btn btn-success ml-2" type="submit">Log In</button>
     </form>
 {% endblock content %}
