Add Blog application

--- a/src/templates/blogs/edit.html
+++ b/src/templates/blogs/edit.html
@@ -3,6 +3,6 @@
 <h1>Edit post</h1>
 <form action="" method="post"> {% csrf_token %}
 {{ form.as_p}}
-    <input type="submit" value="Update">
+    <button class="btn btn-info ml-2" type="submit">Update</button>
     </form>
 {% endblock content %}
