--- a/src/templates/blogs/create.html
+++ b/src/templates/blogs/create.html
@@ -3,6 +3,6 @@
 <h1>New post</h1>
 <form action="" method="post"> {% csrf_token %}
 {{ form.as_p}}
-    <input type="submit" value="Save">
+    <button class="btn btn-success ml-2" type="submit">Save</button>
     </form>
 {% endblock content %}
