--- a/src/templates/blogs/delete.html
+++ b/src/templates/blogs/delete.html
@@ -3,6 +3,6 @@
 <h1>Edit post</h1>
 <form action="" method="post"> {% csrf_token %}
     <p>Delete post {{ post.title }}?</p>
-    <input type="submit" value="Confirm">
+    <button class="btn btn-danger ml-2" type="submit">Confirm</button>
     </form>
 {% endblock content %}
