--- a/src/templates/blogs/details.html
+++ b/src/templates/blogs/details.html
@@ -2,9 +2,11 @@
 {% block content %}
 <div class="post-entry">
 <h2>{{ post.title }}</h2>
+    <p>by {{post.author}} | {{post.date}}</p>
 <p>{{ post.text }}</p>
 </div>
 
 <a href="{% url 'post_edit' post.pk%}">Edit</a>
 <a href="{% url 'post_delete' post.pk%}">Delete</a>
+<a href="{% url 'post_list' %}">Back to posts</a>
 {% endblock content %}
