--- a/src/templates/registration/password_change_done.html
+++ b/src/templates/registration/password_change_done.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends './../blogs/base.html' %}
 {% block title %}Password Changed{% endblock title %}
 {% block content %}
 <h1>Password changed successfully!</h1>
