--- a/src/templates/registration/password_reset_complete.html
+++ b/src/templates/registration/password_reset_complete.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends './../blogs/base.html' %}
 {% block title %}Password reset complete{% endblock title %}
 {% block content %}
 <h1>Password reset complete</h1>
