--- a/src/templates/registration/password_reset_confirm.html
+++ b/src/templates/registration/password_reset_confirm.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends './../blogs/base.html' %}
 {% load crispy_forms_tags %}
 {% block title %}Enter new password{% endblock title %}
 {% block content %}
