--- a/src/templates/registration/password_reset_done.html
+++ b/src/templates/registration/password_reset_done.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends './../blogs/base.html' %}}
 {% block title %}Email Sent{% endblock title %}
 {% block content %}
 <h1>Check your inbox.</h1>
